# pacont

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  clipboard.rs  directory_operations.rs  file_operations.rs  main.rs  utils.rs
tests/: integration_tests.rs
