[package]
name = "pacont"
version = "0.5.3"
edition = "2024"
license = "MIT"
description = "CLI tool to gather code context for LLMs"
repository = "https://github.com/Tmpecho/pacont"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "context", "ai"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
arboard = { version = "3.4", default-features = false }

[dev-dependencies]
tempfile = "3"
